finish simulate Sigma of NFW halo

--- a/ms_method_HSCY1/ms.tex
+++ b/ms_method_HSCY1/ms.tex
@@ -20,38 +20,34 @@
 
 
 \begin{document}
-\title{FPFS Shear Estimator: Systematic Tests on the First Year Hyper Suprime-Cam Survey}
-\author{Xiangchong Li}
-\affiliation{Department of Physics, University of Tokyo, Tokyo 113-0033, Japan}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
-University of Tokyo, Kashiwa 277-8583, Japan}
-\author{Masamune Oguri}
-\affiliation{Department of Physics, University of Tokyo, Tokyo 113-0033, Japan}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
-University of Tokyo, Kashiwa 277-8583, Japan}
-\affiliation{Research Center for the Early Universe, University of Tokyo, Tokyo 113-0033, Japan}
-\author{Nobuhiko Katayama}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
-University of Tokyo, Kashiwa 277-8583, Japan}
-\author{Wentao Luo}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
-University of Tokyo, Kashiwa 277-8583, Japan}
-\author{Wenting Wang}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
-University of Tokyo, Kashiwa 277-8583, Japan}
-\author{Jiaxin Han}
-\affiliation{Department of Astronomy, School of Physics and Astronomy, Shanghai Jiao Tong University, Shanghai, 200240, China}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
-University of Tokyo, Kashiwa 277-8583, Japan}
-\author{HSC Collaboration}
-\noaffiliation
-\email{xiangchong.li@ipmu.jp}
+\title{mass map reconstruction with sparsity method}
+%\author{Xiangchong Li}
+%\affiliation{Department of Physics, University of Tokyo, Tokyo 113-0033, Japan}
+%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
+%University of Tokyo, Kashiwa 277-8583, Japan}
+%\author{Masamune Oguri}
+%\affiliation{Department of Physics, University of Tokyo, Tokyo 113-0033, Japan}
+%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
+%University of Tokyo, Kashiwa 277-8583, Japan}
+%\affiliation{Research Center for the Early Universe, University of Tokyo, Tokyo 113-0033, Japan}
+%\author{Nobuhiko Katayama}
+%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
+%University of Tokyo, Kashiwa 277-8583, Japan}
+%\author{Wentao Luo}
+%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
+%University of Tokyo, Kashiwa 277-8583, Japan}
+%\author{Wenting Wang}
+%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
+%University of Tokyo, Kashiwa 277-8583, Japan}
+%\author{Jiaxin Han}
+%\affiliation{Department of Astronomy, School of Physics and Astronomy, Shanghai Jiao Tong University, Shanghai, 200240, China}
+%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (WPI),\\
+%University of Tokyo, Kashiwa 277-8583, Japan}
+%\author{HSC Collaboration}
+%\noaffiliation
+%\email{xiangchong.li@ipmu.jp}
 
 
-
-%\author{Surhud More}
-%\affiliation{Kavli Institute for the Physics and Mathematics of the Universe (Kavli IPMU, WPI),\\
-%UTIAS, Tokyo Institutes for Advanced Study, University of Tokyo, Chiba 277-8583, Japan}
 
 
 \begin{abstract}
@@ -61,7 +57,7 @@ University of Tokyo, Kashiwa 277-8583, Japan}
 \section{Introduction}
 
 
-\section{Mass Map}
+\section{The Method}
 \label{sec:kappaMap}
 
 \subsection{Kaiser-Squires reconstruction}
