--- a/notebook/simHaloCat.ipynb
+++ b/notebook/simHaloCat.ipynb
@@ -11,17 +11,6 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'hmf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5ee352cc5d1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pylab'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mhmf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mconfigparser\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConfigParser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mastropy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtable\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mastTab\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hmf'"
-     ]
     }
    ],
    "source": [
@@ -35,26 +24,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# run on Master@ipmu"
+    "# run on Master@ipmu\n",
+    "should be run under massMap_Private/notebook/ directory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ConfigParser' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-72439a18f674>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m   \u001b[0mConfigParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mconfigName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'../config/config_lbd2.5_GAMA09H.ini'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfigName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mscale\u001b[0m  \u001b[0;34m=\u001b[0m   \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'transPlane'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'scale'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mny\u001b[0m     \u001b[0;34m=\u001b[0m   \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'transPlane'\u001b[0m  \u001b[0;34m,\u001b[0m\u001b[0;34m'ny'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ConfigParser' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "parser =   ConfigParser()\n",
     "configName='../config/config_lbd2.5_GAMA09H.ini'\n",
@@ -73,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +68,12 @@
     }
    ],
    "source": [
+    "mMin=14.5;mMax=16.5\n",
     "nlp    =   parser.getint('lensZ','nlp')\n",
     "zlMin  =   parser.getfloat('lensZ','zlMin')\n",
     "zlscale=   parser.getfloat('lensZ','zlscale')\n",
     "zlBin  =   np.arange(zlMin,zlMin+zlscale*nlp,zlscale)+zlscale/2.\n",
+    "hmfun  =   hmf.MassFunction(Mmin=mMin,Mmax=mMax)\n",
     "dcmV   =   hmfun.parameter_values['cosmo_model'].differential_comoving_volume(zlBin).value\n",
     "plt.plot(zlBin,dcmV)\n",
     "plt.title('differential comoving volumn as function of redshift')\n",
@@ -104,11 +84,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z=0.035,numHalo=1\n",
+      "z=0.085,numHalo=7\n",
+      "z=0.135,numHalo=13\n",
+      "z=0.18500000000000003,numHalo=21\n",
+      "z=0.23500000000000001,numHalo=27\n",
+      "z=0.28500000000000003,numHalo=31\n",
+      "z=0.3350000000000001,numHalo=34\n",
+      "z=0.38500000000000006,numHalo=36\n",
+      "z=0.43500000000000005,numHalo=35\n",
+      "z=0.48500000000000004,numHalo=34\n",
+      "z=0.535,numHalo=32\n",
+      "z=0.5850000000000001,numHalo=29\n",
+      "z=0.6350000000000001,numHalo=25\n",
+      "z=0.685,numHalo=22\n",
+      "z=0.7350000000000001,numHalo=19\n",
+      "z=0.785,numHalo=16\n",
+      "z=0.8350000000000001,numHalo=13\n",
+      "z=0.8850000000000001,numHalo=11\n",
+      "z=0.935,numHalo=9\n",
+      "z=0.9850000000000001,numHalo=7\n"
+     ]
+    }
+   ],
    "source": [
-    "hmfun  =   hmf.MassFunction(Mmin=14.,Mmax=16)\n",
     "mAll   =   []\n",
     "zAll   =   []\n",
     "conc   =   []\n",
@@ -116,11 +122,31 @@
     "    hmfun.update(z=iz)\n",
     "    volumn=dcmV[i]*zlscale*area\n",
     "    nhalo=int(hmfun.ngtm[0]*volumn+0.5)\n",
-    "    allNum+=nhalo\n",
+    "    print('zMean=%s,numHalo=%s' %(iz,nhalo))\n",
     "    zmin=iz-zlscale/2.\n",
     "    zmax=iz+zlscale/2.\n",
     "    zAll.extend(np.random.uniform(low=zmin,high=zmax,size=nhalo))\n",
-    "    mAll.extend(hmf.sample_mf(N=nhalo,log_mmin=13.5,z=iz,Mmax=16)[0])"
+    "    mAll.extend(hmf.sample_mf(N=nhalo,log_mmin=mMin,z=iz,Mmax=mMax)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "422"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(zAll)"
    ]
   },
   {
@@ -182,9 +208,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<hmf.hmf.MassFunction at 0x7f2d0e83a940>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -225,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
