add notes and halSim

--- a/paper_ms_method_HSCY1/gglens.bib
+++ b/paper_ms_method_HSCY1/gglens.bib
@@ -31,6 +31,49 @@
 }
 
 
+@ARTICLE{gglens-SDSS-Rachel2006,
+       author = {{Mandelbaum}, Rachel and {Seljak}, Uro{\v{s}} and
+         {Kauffmann}, Guinevere and {Hirata}, Christopher M. and
+         {Brinkmann}, Jonathan},
+        title = "{Galaxy halo masses and satellite fractions from galaxy-galaxy lensing in the Sloan Digital Sky Survey: stellar mass, luminosity, morphology and environment dependencies}",
+      journal = {\mnras},
+     keywords = {gravitational lensing, galaxies: haloes, galaxies: stellar content, Astrophysics},
+         year = "2006",
+        month = "May",
+       volume = {368},
+       number = {2},
+        pages = {715-731},
+          doi = {10.1111/j.1365-2966.2006.10156.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0511164},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006MNRAS.368..715M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{gglens-GAMA-Han2014,
+       author = {{Han}, Jiaxin and {Eke}, Vincent R. and {Frenk}, Carlos S. and {Mand
+        elbaum}, Rachel and {Norberg}, Peder and {Schneider}, Michael D. and
+         {Peacock}, John A. and {Jing}, Yipeng and {Baldry}, Ivan and {Bland
+        -Hawthorn}, Joss},
+        title = "{Galaxy And Mass Assembly (GAMA): the halo mass of galaxy groups from maximum-likelihood weak lensing}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, methods: data analysis, dark matter, galaxies: clusters, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = "2015",
+        month = "Jan",
+       volume = {446},
+       number = {2},
+        pages = {1356-1379},
+          doi = {10.1093/mnras/stu2178},
+archivePrefix = {arXiv},
+       eprint = {1404.6828},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.446.1356H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{clusterLens-HSCSourceSelect2018,
        author = {{Medezinski}, Elinor and {Oguri}, Masamune and {Nishizawa}, Atsushi J. and
          {Speagle}, Joshua S. and {Miyatake}, Hironao and {Umetsu}, Keiichi and
@@ -53,5 +96,29 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/\#abs/2018PASJ...70...30M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@ARTICLE{Mass-Calibration_actpol-HSC2019,
+       author = {{Miyatake}, Hironao and {Battaglia}, Nicholas and {Hilton}, Matt and
+         {Medezinski}, Elinor and {Nishizawa}, Atsushi J. and {More}, Surhud and
+         {Aiola}, Simone and {Bahcall}, Neta and {Bond}, J. Richard and
+         {Calabrese}, Erminia},
+        title = "{Weak-lensing Mass Calibration of ACTPol Sunyaev─Zel{\textquoteright}dovich Clusters with the Hyper Suprime-Cam Survey}",
+      journal = {\apj},
+     keywords = {cosmology: observations, galaxies: clusters: general, gravitational lensing: weak, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2019",
+        month = "Apr",
+       volume = {875},
+       number = {1},
+          eid = {63},
+        pages = {63},
+          doi = {10.3847/1538-4357/ab0af0},
+archivePrefix = {arXiv},
+       eprint = {1804.05873},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...875...63M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
