--- a/paper_ms_method_HSCY1/lensCat.bib
+++ b/paper_ms_method_HSCY1/lensCat.bib
@@ -163,21 +163,26 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{LBG-wang2018,
-   author = {{Wang}, W. and {Han}, J. and {Sonnenfeld}, A. and {Yasuda}, N. and 
-	{Li}, X. and {Jing}, Y. and {More}, S. and {Price}, P.~A. and 
-	{Lupton}, R. and {Stark}, D.~V. and {Lan}, T.-W. and {Takada}, M. and 
-	{Huang}, S. and {Luo}, W. and {Bahcall}, N.~A. and {Komiyama}, Y.
-	},
-    title = "{The stellar halo of isolated central galaxies in the Hyper Suprime-Cam imaging survey}",
-  journal = {arXiv e-prints},
-archivePrefix = "arXiv",
-   eprint = {1811.04714},
- keywords = {Astrophysics - Astrophysics of Galaxies},
-     year = 2018,
-    month = nov,
-   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv181104714W},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+   author = {{Wang}, Wenting and {Han}, Jiaxin and {Sonnenfeld}, Alessandro and
+         {Yasuda}, Naoki and {Li}, Xiangchong and {Jing}, Yipeng and
+         {More}, Surhud and {Price}, Paul A. and {Lupton}, Robert and
+         {Rykoff}, Eli S.},
+        title = "{The stellar halo of isolated central galaxies in the Hyper Suprime-Cam imaging survey}",
+      journal = {\mnras},
+     keywords = {Galaxy: halo, dark matter, Astrophysics - Astrophysics of Galaxies},
+         year = "2019",
+        month = "Aug",
+       volume = {487},
+       number = {2},
+        pages = {1580-1606},
+          doi = {10.1093/mnras/stz1339},
+archivePrefix = {arXiv},
+       eprint = {1811.04714},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.487.1580W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Plank-LBG2013,
    author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and 
@@ -246,6 +251,36 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{GAMA-DR2018,
+   author = {{Baldry}, I.~K. and {Liske}, J. and {Brown}, M.~J.~I. and {Robotham}, A.~S.~G. and 
+	{Driver}, S.~P. and {Dunne}, L. and {Alpaslan}, M. and {Brough}, S. and 
+	{Cluver}, M.~E. and {Eardley}, E. and {Farrow}, D.~J. and {Heymans}, C. and 
+	{Hildebrandt}, H. and {Hopkins}, A.~M. and {Kelvin}, L.~S. and 
+	{Loveday}, J. and {Moffett}, A.~J. and {Norberg}, P. and {Owers}, M.~S. and 
+	{Taylor}, E.~N. and {Wright}, A.~H. and {Bamford}, S.~P. and 
+	{Bland-Hawthorn}, J. and {Bourne}, N. and {Bremer}, M.~N. and 
+	{Colless}, M. and {Conselice}, C.~J. and {Croom}, S.~M. and 
+	{Davies}, L.~J.~M. and {Foster}, C. and {Grootes}, M.~W. and 
+	{Holwerda}, B.~W. and {Jones}, D.~H. and {Kafle}, P.~R. and 
+	{Kuijken}, K. and {Lara-Lopez}, M.~A. and {L{\'o}pez-S{\'a}nchez}, {\'A}.~R. and 
+	{Meyer}, M.~J. and {Phillipps}, S. and {Sutherland}, W.~J. and 
+	{van Kampen}, E. and {Wilkins}, S.~M.},
+    title = "{Galaxy And Mass Assembly: the G02 field, Herschel-ATLAS target selection and data release 3}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1711.09139},
+ keywords = {catalogues, surveys, galaxies: distances and redshifts, galaxies: photometry},
+     year = 2018,
+    month = mar,
+   volume = 474,
+    pages = {3875-3888},
+      doi = {10.1093/mnras/stx3042},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.474.3875B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 %===================================
 %Optimal redshift weighting scheme 
 %===================================
@@ -265,5 +300,50 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2018MNRAS.478.4277S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+
+
+%====================================
+%Halo Model
+%====================================
+@ARTICLE{halo-NFW1997ApJ,
+       author = {{Navarro}, Julio F. and {Frenk}, Carlos S. and {White}, Simon D.~M.},
+        title = "{A Universal Density Profile from Hierarchical Clustering}",
+      journal = {\apj},
+     keywords = {Cosmology: Theory, Cosmology: Dark Matter, Galaxies: Halos, Methods: Numerical, Astrophysics},
+         year = "1997",
+        month = "Dec",
+       volume = {490},
+       number = {2},
+        pages = {493-508},
+          doi = {10.1086/304888},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9611107},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997ApJ...490..493N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{haloModel-TJ2003-3pt,
+       author = {{Takada}, Masahiro and {Jain}, Bhuvnesh},
+        title = "{The three-point correlation function in cosmology}",
+      journal = {\mnras},
+     keywords = {cosmology: theory, large-scale structure of Universe, Astrophysics},
+         year = "2003",
+        month = "Apr",
+       volume = {340},
+       number = {2},
+        pages = {580-608},
+          doi = {10.1046/j.1365-8711.2003.06321.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0209167},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003MNRAS.340..580T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 
