--- a/paper_ms_method_HSCY1/massMap.bib
+++ b/paper_ms_method_HSCY1/massMap.bib
@@ -19,6 +19,33 @@ Basics
 
 
 
+====
+Method
+====
+
+==
+Sparsity
+==
+@ARTICLE{massMap-Glimpse3D2014,
+   author = {{Leonard}, A. and {Lanusse}, F. and {Starck}, J.-L.},
+    title = "{GLIMPSE: accurate 3D weak lensing reconstructions using sparsity}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1308.1353},
+ keywords = {gravitational lensing: weak, methods: data analysis, methods: statistical, galaxies: clusters: general, dark matter},
+     year = 2014,
+    month = may,
+   volume = 440,
+    pages = {1281-1294},
+      doi = {10.1093/mnras/stu273},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2014MNRAS.440.1281L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
 
 ====
 Obs
@@ -109,5 +136,52 @@ archivePrefix = {arXiv},
 }
 
 
+
+@ARTICLE{massMap_KIDS450_prediction2018,
+       author = {{Shan}, HuanYuan and {Liu}, Xiangkun and {Hildebrandt}, Hendrik and
+         {Pan}, Chuzhong and {Martinet}, Nicolas and {Fan}, Zuhui and
+         {Schneider}, Peter and {Asgari}, Marika and
+         {Harnois-D{\'e}raps}, Joachim and {Hoekstra}, Henk and {Wright}, Angus and
+         {Dietrich}, J{\"o}rg P. and {Erben}, Thomas and {Getman}, Fedor and
+         {Grado}, Aniello and {Heymans}, Catherine and {Klaes}, Dominik and
+         {Kuijken}, Konrad and {Merten}, Julian and {Puddu}, Emanuella and
+         {Radovich}, Mario and {Wang}, Qiao},
+        title = "{KiDS-450: cosmological constraints from weak lensing peak statistics - I. Inference from analytical prediction of high signal-to-noise ratio convergence peaks}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, dark matter, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2018",
+        month = "Feb",
+       volume = {474},
+       number = {1},
+        pages = {1116-1134},
+          doi = {10.1093/mnras/stx2837},
+archivePrefix = {arXiv},
+       eprint = {1709.07651},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.474.1116S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{massMap_KIDS450_inference2018,
+       author = {{Martinet}, Nicolas and {Schneider}, Peter and {Hildebrandt}, Hendrik and
+         {Shan}, HuanYuan and {Asgari}, Marika and {Dietrich}, J{\"o}rg P. and
+         {Harnois-D{\'e}raps}, Joachim and {Erben}, Thomas and {Grado}, Aniello and
+         {Heymans}, Catherine and {Hoekstra}, Henk and {Klaes}, Dominik and
+         {Kuijken}, Konrad and {Merten}, Julian and {Nakajima}, Reiko},
+        title = "{KiDS-450: cosmological constraints from weak-lensing peak statistics - II: Inference from shear peaks using N-body simulations}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, surveys, cosmological parameters, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2018",
+        month = "Feb",
+       volume = {474},
+       number = {1},
+        pages = {712-730},
+          doi = {10.1093/mnras/stx2793},
+archivePrefix = {arXiv},
+       eprint = {1709.07678},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.474..712M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
