--- a/paper_ms_method_HSCY1/shearCor.bib
+++ b/paper_ms_method_HSCY1/shearCor.bib
@@ -93,3 +93,60 @@ doi = {10.1093/mnras/stx1675},
 URL = {http://dx.doi.org/10.1093/mnras/stx1675},
 eprint = {/oup/backfile/content_public/journal/mnras/471/2/10.1093_mnras_stx1675/1/stx1675.pdf}
 }
+
+
+@ARTICLE{cosmicShear_HSC1_Fourier2019,
+       author = {{Hikage}, Chiaki and {Oguri}, Masamune and {Hamana}, Takashi and
+         {More}, Surhud and {Mandelbaum}, Rachel and {Takada}, Masahiro and
+         {K{\"o}hlinger}, Fabian and {Miyatake}, Hironao and
+         {Nishizawa}, Atsushi J. and {Aihara}, Hiroaki and {Armstrong}, Robert and
+         {Bosch}, James and {Coupon}, Jean and {Ducout}, Anne and {Ho}, Paul and
+         {Hsieh}, Bau-Ching and {Komiyama}, Yutaka and
+         {Lanusse}, Fran{\c{c}}ois and {Leauthaud}, Alexie and
+         {Lupton}, Robert H. and {Medezinski}, Elinor and {Mineo}, Sogo and
+         {Miyama}, Shoken and {Miyazaki}, Satoshi and {Murata}, Ryoma and
+         {Murayama}, Hitoshi and {Shirasaki}, Masato and
+         {Sif{\'o}n}, Crist{\'o}bal and {Simet}, Melanie and {Speagle}, Joshua and
+         {Spergel}, David N. and {Strauss}, Michael A. and {Sugiyama}, Naoshi and
+         {Tanaka}, Masayuki and {Utsumi}, Yousuke and {Wang}, Shiang-Yu and
+         {Yamada}, Yoshihiko},
+        title = "{Cosmology from cosmic shear power spectra with Subaru Hyper Suprime-Cam first-year data}",
+      journal = {\pasj},
+     keywords = {dark matter, gravitational lensing: weak, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2019",
+        month = "Apr",
+       volume = {71},
+       number = {2},
+          eid = {43},
+        pages = {43},
+          doi = {10.1093/pasj/psz010},
+archivePrefix = {arXiv},
+       eprint = {1809.09148},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PASJ...71...43H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{cosmicShear_HSC1_configuration2019,
+       author = {{Hamana}, T. and {Shirasaki}, M. and {Miyazaki}, S. and {Hikage}, C. and
+         {Oguri}, M. and {More}, S. and {Armstrong}, R. and {Leauthaud}, A. and
+         {Mandelbaum}, R. and {Miyatake}, H. and {Nishizawa}, A.~J. and
+         {Simet}, M. and {Takada}, M. and {Aihara}, H. and {Bosch}, J. and
+         {Komiyama}, Y. and {Lupton}, R. and {Murayama}, H. and
+         {Strauss}, M.~A. and {Tanaka}, M.},
+        title = "{Cosmological constraints from cosmic shear two-point correlation functions with HSC survey first-year data}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2019",
+        month = "Jun",
+          eid = {arXiv:1906.06041},
+        pages = {arXiv:1906.06041},
+archivePrefix = {arXiv},
+       eprint = {1906.06041},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190606041H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
