--- a/paper_ms_method_HSCY1/ms.tex
+++ b/paper_ms_method_HSCY1/ms.tex
@@ -264,6 +264,16 @@ t^{(n+1)} &= \frac{1+\sqrt{1+4(t^{(n)})^2}}{2},\\
 with $t^{(0)}=1$ and $X^{(0)}=\alpha^{(0)}$.
 \section{Simulation}
 
+\subsection{One Halo}
+\label{subsec:oneHalo}
+
+\subsection{Multiple Halo}
+\label{subsec:multiHalo}
+
+\subsection{Mock catalog}
+\label{subsec:mockCat}
+
+
 
 \section{Results}
 ...
