--- a/notebook/nfwWB00.ipynb
+++ b/notebook/nfwWB00.ipynb
@@ -591,7 +591,7 @@
     "                omega_lam= 0.7)\n",
     "    kappaGS=haloGS.getConvergence(pos=(2000.,1000.),z_s=np.ones(1)*2.,units = \"arcsec\")\n",
     "    shearGS=haloGS.getShear(pos=(2000.,1000.),z_s=np.ones(1)*2.,units = \"arcsec\",reduced=False)\n",
-    "    print('r_s')\n",
+    "    print('r_s:')\n",
     "    print(halo.rs_arcsec,haloGS.rs_arcsec)\n",
     "    print('kappa:')\n",
     "    print(kappa,kappaGS)\n",
