--- a/notebook/nfwTest.ipynb
+++ b/notebook/nfwTest.ipynb
@@ -3,13 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -134,24 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0061795338976379e+18\n"
+      "704325673728285.0\n"
      ]
     }
    ],
    "source": [
     "def testMass():\n",
-    "    halo2=halSim.nfw_lensTJ03(mass=1e18,conc=2.,redshift=0.3,ra=0.,dec=0.)\n",
+    "    halo2=halSim.nfw_lensTJ03(mass=7e+14,conc=2.,redshift=0.3,ra=0.,dec=0.)\n",
     "    x=np.linspace(0.01,5.,5000)\n",
     "    y=np.zeros(5000)\n",
     "    Sigma2=halo2.Sigma(x*halo2.rs_arcsec,y*halo2.rs_arcsec)\n",
@@ -170,11 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
