--- a/notebook/process_HSClike_stampSim.ipynb
+++ b/notebook/process_HSClike_stampSim.ipynb
@@ -16,7 +16,6 @@
    "source": [
     "%pylab inline\n",
     "import os\n",
-    "import fitsio\n",
     "import haloSim\n",
     "import matplotlib\n",
     "import numpy as np\n",
@@ -108,6 +107,7 @@
     "        self.sigma=parser.getfloat('transPlane','smooth_scale')*ratio\n",
     "\n",
     "        # line-of-signt direction\n",
+    "        # background plane\n",
     "        zmin=parser.getfloat('sourceZ','zmin')\n",
     "        deltaz=parser.getfloat('sourceZ','zscale')\n",
     "        nz=parser.getint('sourceZ','nz')\n",
@@ -118,7 +118,13 @@
     "        self.zbound=zbound\n",
     "        self.zcgrid=zcgrid\n",
     "        self.deltaz=deltaz\n",
+    "        self.nz=nz\n",
     "        self.shape=(nz,ny,nx)\n",
+    "        \n",
+    "        # foreground plane\n",
+    "        zlmin=parser.getfloat('lensZ','zlmin')\n",
+    "        deltazl=parser.getfloat('lensZ','zlscale')\n",
+    "        nzl=parser.getint('lensZ','nlp')\n",
     "        \n",
     "    def pixelize_data(self,x,y,z,v):\n",
     "        xbin=np.int_((x-self.xbound[0])/self.delta)\n",
@@ -145,9 +151,24 @@
     "                    if wsum>0.1:\n",
     "                        dataOut[iz,iy,ix]=np.sum(wl*v[mskx])/wsum\n",
     "        return dataOut\n",
-    "    def lensing_kernel(self,poz_bins,poz_data):\n",
-    "        if poz_bins is None and poz_data is None:\n",
-    "            pass\n",
+    "    \n",
+    "    def lensing_kernel(self,poz_bins=None,poz_data=None):\n",
+    "        assert (poz_bins is None)==(poz_data is None)\n",
+    "        if poz_bins is None:\n",
+    "            if self.nlp<=1:\n",
+    "                lensKernel =   np.ones((self.nz,self.nzl))\n",
+    "            else:\n",
+    "                lensKernel =   np.zeros((self.nz,self.nzl))\n",
+    "                for i,zs in enumerate(zcgrid):\n",
+    "                    cosmo=cosmology.Cosmo(h=1,omega_m=0.3)\n",
+    "                    kl =   np.zeros(self.nzl)\n",
+    "                    mask=  zlcgrid<zs \n",
+    "                    kl[mask] =   cosmo.Da(zlcgrid[mask],zs)*cosmo.Da(0.,zlcgrid[mask])/cosmo.Da(0.,zs)*four_pi_G_over_c_squared()\n",
+    "                    # Sigma_M_zl_bin\n",
+    "                    rhoM_ave=cosmo.rho_m(zlcgrid)\n",
+    "                    DaBin=cosmo.Da(zlbound[:-1],zlbound[1:])\n",
+    "                    lensKer=kl*rhoM_ave*DaBin\n",
+    "                    self.lensKernel[i,:]    =   self.cosmo.deltacritinv(zlcgrid,zs)\n",
     "        else:\n",
     "            pass\n",
     "        return"
@@ -280,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +313,6 @@
     }
    ],
    "source": [
-    "# pixCartesian3D.py\n",
     "# pixelize data into 3D cartesian coordinates\n",
     "import astropy.io.fits as pyfits\n",
     "\n",
@@ -320,8 +340,16 @@
     "    noiU=noiTab[ig*ng:(ig+1)*ng]\n",
     "    val=noiU[g1name]+noiU[g2name]*1j\n",
     "    pixDatAll[ig]=gridInfo.pixelize_data(noiU[raname],noiU[decname],noiU[zname],val)\n",
-    "    "
+    "    \n",
+    "pyfits.writeto(outfname,pixDatAll)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
