--- a/notebook/process-stamp-HSClike.ipynb
+++ b/notebook/process-stamp-HSClike.ipynb
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
     "plt.title('photo-z binning',fontsize=20)\n",
     "plt.xlabel(r'$z_{\\rm{best}}$')\n",
     "plt.ylabel('prob')\n",
-    "plt.savefig('photo-z_binning.pdf')"
+    "plt.savefig('../paper_ms_method_HSCY1/photo-z_binning.pdf')"
    ]
   },
   {
