add std source bin map

--- a/notebook/process-stamp-HSClike.ipynb
+++ b/notebook/process-stamp-HSClike.ipynb
@@ -1539,18 +1539,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pixSigmaErr=np.std(pixDatAll,axis=0)\n",
     "outfname3='wrkDir/stampSim/HSC-like/process-equalNum/pixSigma.fits'\n",
-    "pyfits.writeto(outfname3,pixSigmaErr,overwrite=True)"
+    "if False:\n",
+    "    pixSigmaErr=np.std(pixDatAll,axis=0)\n",
+    "    pyfits.writeto(outfname3,pixSigmaErr,overwrite=True)\n",
+    "else:\n",
+    "    pixSigmaErr=pyfits.getdata(outfname3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1578,7 @@
     "cbar.ax.set_title(r'$\\sigma_{\\rm{pix}}$')\n",
     "plt.title('The 5\\'th source bin')\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../paper_ms_method_HSCY1/noise_std_map.pdf')"
+    "plt.savefig('../paper_ms_method_HSCY1/noise_std_map_pix.pdf')"
    ]
   },
   {
@@ -1605,7 +1608,7 @@
     "cbar.ax.set_title(r'$\\sigma_{\\rm{model}}$')\n",
     "plt.title('The 5\\'th source bin')\n",
     "plt.tight_layout()\n",
-    "fig.savefig('../paper_ms_method_HSCY1/noise_std_map.pdf')"
+    "plt.savefig('../paper_ms_method_HSCY1/noise_std_map_model.pdf')"
    ]
   },
   {
